--- a/jobs/cloud-provider/templates/config/cloud-provider.ini.erb
+++ b/jobs/cloud-provider/templates/config/cloud-provider.ini.erb
@@ -26,6 +26,13 @@
 
       disk_config_string="[Disk]\n"
       disk_config['scsicontrollertype'] = p('cloud-provider.vsphere.scsicontrollertype')
+    elsif provider_type == 'openstack'
+      cloud_config_string = "[Global]\n"
+      cloud_config['auth-url'] = p('cloud-provider.openstack.auth-url')
+      cloud_config['username'] = p('cloud-provider.openstack.username')
+      cloud_config['password'] = p('cloud-provider.openstack.password')
+      cloud_config['tenant-id'] = p('cloud-provider.openstack.tenant-id')
+      cloud_config['domain-name'] = p('cloud-provider.openstack.domain-name')
     end
 
     cloud_config.each { |key, prop| cloud_config_string = cloud_config_string + "#{key}=#{prop}\n" }
