--- a/jobs/kubernetes-api/templates/bin/kubernetes_api_ctl.erb
+++ b/jobs/kubernetes-api/templates/bin/kubernetes_api_ctl.erb
@@ -71,6 +71,9 @@ start_kubernetes_api_server() {
       --cloud-config="${cloud_config}" \
       --enable-swagger-ui=true \
       --etcd-servers=<%= etcd_endpoints %> \
+      --kubelet-certificate-authority=/var/vcap/jobs/kubernetes-api/config/kubelet-ca.crt \
+      --kubelet-client-certificate=/var/vcap/jobs/kubernetes-api/config/kubelet-client.crt \
+      --kubelet-client-key=/var/vcap/jobs/kubernetes-api/config/kubelet-client.key \
       --etcd-cafile=/var/vcap/jobs/kubernetes-api/config/etcd-ca.crt \
       --etcd-certfile=/var/vcap/jobs/kubernetes-api/config/etcd-client.crt \
       --etcd-keyfile=/var/vcap/jobs/kubernetes-api/config/etcd-client.key \
